--- a/src/components/styles/Header.module.scss
+++ b/src/components/styles/Header.module.scss
@@ -87,10 +87,6 @@ header {
           }
         }
 
-        @media (min-width: 1230px) {
-          padding: 0;
-        }
-
         li {
           a {
             position: relative;
