--- a/src/components/styles/TourDetails.module.scss
+++ b/src/components/styles/TourDetails.module.scss
@@ -10,14 +10,14 @@
   max-width: 1220px;
   width: 100%;
   margin: 0 auto;
-  padding: 0;
+  padding: 6.25em 0 0;
+
+  @media (min-width: 720px) {
+    padding: 10em 0 0;
+  }
 
   .titleContainer {
-    padding-block: 8rem 2rem;
-
-    @media (min-width: 780px) {
-      padding-block: 12rem 0;
-    }
+    margin-block: 0 2em;
 
     & > * {
       margin: 0;
